style(tokens): :lipstick: separated colour tokens and generic properties into a tokens files. correct small-content contrast issue on both light and dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,11 @@
 /* Main styles here */
+* {
+  transition:
+    background-color 0.2s ease,
+    color 0.2s ease,
+    border-color 0.2s ease;
+}
+
 html {
   font-family: var(--font-sans);
 }
@@ -35,7 +42,7 @@ a {
   font-size: var(--link-base-font-size);
   font-style: normal;
 
-  &.active {
+  &.active, &:hover {
   text-decoration: underline;
   text-underline-offset: 3px;
   }
